adding image tags

--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -98,7 +98,7 @@
             <div class="row">
               <div class="col-sm-4">
                 <center>
-                  <img class="no-border-rounded-image" src="/assets/facebook-like-click.jpg" alt="clicking a facebook like" width="75%" class="img-responsive">
+                  <%= image_tag "facebook-like-click.jpg", class: "no-border-rounded-image img-responsive", alt: "clicking a facebook like", width: "75%" %>
                 </center>
               </div>
 
