experimental change to icon tags (star on front page might work in production)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
             </li>
           </ul>
         </div> 
-        <% unless @user %><a href="/auth/facebook" id="fb" class="homeBtn btn"><%= tag("i", class: "icon-facebook-1") %>Login with Facebook</a><% end %>
+        <% unless @user %><a href="/auth/facebook" id="fb" class="homeBtn btn"><i class="icon-facebook-1">Login with Facebook</i></a><% end %>
       </div>
     </div>
   </section>
