update and merge, use encodeUriComponent on ajax post to attempt to fix authenticity token issue

--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -174,7 +174,7 @@
 
       $.ajax({
         type: "POST",
-        url: $form.attr("action") + "?&authenticity_token=" + auth_token,
+        url: $form.attr("action") + "?&authenticity_token=" + encodeURIComponent(auth_token),
         data: {feedback: feedback, url: url},
         dataType: "script",
         complete: function(returnData){
