--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -159,21 +159,35 @@
             <div class="row">
               <div class="col-sm-4">
                 <h2>Finding the active projects</h2>
-                <p>stuff</p> 
-                <p>more stuff</p>
+                <p>Pulling out recommendations from here is pretty simple. First we look at all of the projects that users in the cluster have backed, and filter them to include only the ones that are still active (the ones you can still donate to). Then we count how many people in the cluster have backed each project and then rank them. This way we get a sense of which projects are representative of the cluster, and the most popular.
+<pre class="pre-scrollable prettyprint">@ranked_active_projects = Hash.new(0)
+ks_users_in_cluster.each do |user|
+  actives = user.ks_projects.where(:active => true)
+  actives.each do |project|
+    @ranked_active_projects[project] += 1
+  end
+end
+</pre>      
+                These are our first recommendations the the user. Better projects are going to tend to have more backers so we make an assumption that these might be slightly more appealing on average. </p> 
              </div>
               <div class="col-sm-4">
                 <h2>Recommendations</h2>
-                <p>st</p>
-                <p>uff</p>
-
+                <p>We pull out the top two and offer them to the user. We also add a random pick, which may come from. This is in part to allow the to escape their cluster if they've been classified poorly, and also to let them keep looking for projects even after they have seen all of the active projects in their cluster. There is some randomness in the algorithm, so in some cases a user may be in a very small cluster with a very small number of active projects. </p>
               </div>
 
               <div class="col-sm-4">
                 <h2>A similar user</h2>
-                <p>similar</p> 
+In addition to our recommendations, we identify the person in their cluster who we have gauged to be most similar to them, again by Euclidean distance.
 
-                <p>user</p>
+                <p><pre class="prettyprint">
+@most_similar = ks_users_in_cluster.min_by do |user|
+  Kmeans.distance(@user.scores, user.scores)
+end
+</pre></p>
+                <div class="col-sm-8">
+                <h2>[a diagram that spans two columns]</h2>
+                <p> </p> 
+                </div>
 
                 <br>
                 <center>
@@ -203,7 +217,7 @@
 
               <div class="col-sm-4">
                 <h2>The user's profile</h2>
-              <p>Since we are recording both positive and negative feedback, we built an interface for users to take a look through the projects they have liked. This means that they browse through some recommendations, rate them up or down, and then come back later to see what they've liked. This makes it easy 
+              <p>Since we are recording both positive and negative feedback, we built an interface for users to take a look through the projects they have liked. This means that they can browse through some recommendations, rate them up or down, and then come back later to see what they've liked. If you're looking for a Kickstarter project to back, this can really help a lot. 
               </p>
               <p>Since we also provide a Kickstarter user who we calculated to be most similar, we allow our users to follow them. We thought that maybe if you find someone who has backed a lot of projects that you find interesting, you could keep track of them and know when they've backed something new. The feature as currently implemented is mostly a demonstration rather than a functional tool. </p>
               </div>
@@ -211,7 +225,7 @@
               <div class="col-sm-4">
                 <h2>Classifying by Facebook Likes</h2>
                 <p>What happens when we have a new user that hasnt backed any kickstarter projects? We look at his facebook likes and map the facebook likes categories to the kickstarter categories. Say Albert hasn't backed any kickstarter projects but he has liked 6 Artists pages on facebook, 3 theaters, 2 comic books, 2 design pages and 1 movie then he would be given the same score as Alex.</p>
-                <p>We had a lot of fun building this. Let us know what you think.</p><p class="pull-right">Joe and Michael</p>
+                <p>We had a lot of fun building this. Let us know what you think.</p><p class="pull-right"><%= link_to "Joe", "http://www.twitter.com/jnoconor"%> and <%= link_to "Michael", "http://www.twitter.com/mpolycar" %></p>
                 </div>
                 <div class="col-sm-4 pull-right"> 
                 <i class="icon-star iconBig pull-right"></i>
