a couple of hacky maneuvers to catch exceptions on categories on user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
 
               <div class="portfolio-items isotopeWrapper clearfix imgHover">
                 <% @liked_recs.each do |rec| %>
-                <article class="col-sm-4 isotopeItem profile-recommendation <%= rec.ks_project.parent_category.downcase %>">
+                <article class="col-sm-4 isotopeItem profile-recommendation <%= rec.ks_project.parent_category.downcase if rec.ks_project.parent_category %>">
                   <section class="imgWrapper">
                     <a href="http://www.kickstarter.com<%=rec.ks_project.url %>"> <img alt="" src="<%= rec.ks_project.image_url %>" class="img-responsive">
                   </section>
